manifests/base/api/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: dangnam141002/threads-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
